--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <li><i class="fas fa-camera"></i> Smart Capture: Just point your device at your blood pressure meter</li>
                 <li><i class="fas fa-file-export"></i> Smart Import/Export: Save your measurements in CSV format</li>
                 <li><i class="fas fa-history"></i> Detailed History: View and customize your measurement columns</li>
+                <li><i class="fas fa-chart-line"></i> Trend Analysis: Interactive graphs to visualize patterns over time</li>
+                <li><i class="fas fa-file-pdf"></i> Report Generation: Create PDF reports with charts for sharing</li>
                 <li><i class="fas fa-moon"></i> Dark Mode: Comfortable viewing day and night</li>
                 <li><i class="fas fa-lock"></i> Privacy First: Measurements are stored only on your device</li>
                 <li><i class="fas fa-plug"></i> Zero Setup: No account needed to get started</li>
@@ -60,6 +62,8 @@
                 <li><i class="fas fa-camera"></i> スマート読み取り：カメラを向けるだけで数値を認識</li>
                 <li><i class="fas fa-file-export"></i> データ管理：CSV形式で手軽にバックアップ</li>
                 <li><i class="fas fa-history"></i> 履歴機能：血圧データを見やすく整理</li>
+                <li><i class="fas fa-chart-line"></i> 傾向分析：経時的なパターンを可視化するインタラクティブグラフ</li>
+                <li><i class="fas fa-file-pdf"></i> レポート生成：共有用のチャート付きPDFレポート作成</li>
                 <li><i class="fas fa-moon"></i> ダークモード：目に優しい画面表示</li>
                 <li><i class="fas fa-lock"></i> 安心設計：測定値は端末内でのみ管理</li>
                 <li><i class="fas fa-plug"></i> 簡単操作：面倒な設定不要ですぐに使える</li>
@@ -68,6 +72,8 @@
                 <li><i class="fas fa-camera"></i> 智能识别：对准血压计即可快速读取数值</li>
                 <li><i class="fas fa-file-export"></i> 数据导出：支持 CSV 格式，方便整理归档</li>
                 <li><i class="fas fa-history"></i> 历史记录：血压数据一目了然，随时查看趋势</li>
+                <li><i class="fas fa-chart-line"></i> 趋势分析：可视化血压变化模式的交互图表</li>
+                <li><i class="fas fa-file-pdf"></i> 报告生成：创建带图表的PDF报告用于分享</li>
                 <li><i class="fas fa-moon"></i> 护眼模式：夜间使用也不累</li>
                 <li><i class="fas fa-lock"></i> 数据安全：测量值严格保密，仅在本机存储</li>
                 <li><i class="fas fa-plug"></i> 即刻使用：无需注册，随装随用</li>
@@ -76,6 +82,8 @@
                 <li><i class="fas fa-camera"></i> 智能識別：對準血壓計即可快速讀取數值</li>
                 <li><i class="fas fa-file-export"></i> 資料匯出：支援 CSV 格式，方便整理備份</li>
                 <li><i class="fas fa-history"></i> 歷史紀錄：血壓數據一目瞭然，隨時查看趨勢</li>
+                <li><i class="fas fa-chart-line"></i> 趨勢分析：可視化血壓變化的互動圖表</li>
+                <li><i class="fas fa-file-pdf"></i> 報告生成：建立帶圖表的PDF報告用於分享</li>
                 <li><i class="fas fa-moon"></i> 護眼模式：夜間使用也不疲勞</li>
                 <li><i class="fas fa-lock"></i> 資料安全：測量值嚴格保密，僅保存在本機</li>
                 <li><i class="fas fa-plug"></i> 立即使用：免註冊，隨裝即用</li>
@@ -412,7 +420,7 @@
             src="app-gallery-badge.png"
           />
         </a>
-        <a href="/apk/bplens-1.0-8.apk">
+        <a href="/apk/bplens-1.1-9.apk">
           <svg class="apk-badge" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg">
             <rect width="200" height="60" rx="5" fill="#000000"/>
             <text x="100" y="38" font-family="Arial" font-size="18" fill="white" text-anchor="middle" font-weight="500">
@@ -487,7 +495,7 @@
           <div class="download-card">
             <h3 data-i18n="apkTitle">Direct APK Download</h3>
             <p data-i18n="apkDesc">Manual installation for advanced users.</p>
-            <a href="/apk/bplens-1.0-8.apk">
+            <a href="/apk/bplens-1.1-9.apk">
               <svg class="apk-badge" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg">
                 <rect width="200" height="60" rx="5" fill="#000000"/>
                 <text x="100" y="38" font-family="Arial" font-size="18" fill="white" text-anchor="middle" font-weight="500">
@@ -496,7 +504,7 @@
               </svg>
             </a>
             <div class="version-info">
-              Version 1.0 (Build 8)
+              Version 1.1 (Build 9)
             </div>
           </div>
         </div>
@@ -530,7 +538,7 @@
             src="app-gallery-badge.png"
           />
         </a>
-        <a href="/apk/bplens-1.0-8.apk">
+        <a href="/apk/bplens-1.1-9.apk">
           <svg class="apk-badge" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg">
             <rect width="200" height="60" rx="5" fill="#000000"/>
             <text x="100" y="38" font-family="Arial" font-size="18" fill="white" text-anchor="middle" font-weight="500">
